[package]
name = "dialog-expect"
version = "1.0.2"
edition = "2021"
authors = ["TH3-S4LM0N"]
description = "Display a dialog box with the message when calling `.expect`"
readme = "README.md"
documentation = "https://docs.rs/dialog-expect"
repository = "https://github.com/TH3-S4LM0N/dialog-expect"
license = "MIT"
keywords = ["dialog", "error"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-dialog = "0.6.3"